// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<td
  className="source-meta source-line-issues source-line-with-issues"
  data-line-number={3}
>
  <ButtonPlain
    aria-label="source_viewer.issues_on_line.show"
    onClick={[MockFunction]}
  >
    <Tooltip
      overlay="source_viewer.issues_on_line.multiple_issues"
    >
      <IssueIcon
        type="BUG"
      />
    </Tooltip>
    <span
      className="source-line-issues-counter"
    >
      2
    </span>
  </ButtonPlain>
</td>
`;

exports[`should render correctly: multiple issues, same type 1`] = `
<td
  className="source-meta source-line-issues source-line-with-issues"
  data-line-number={3}
>
  <ButtonPlain
    aria-label="source_viewer.issues_on_line.show"
    onClick={[MockFunction]}
  >
    <Tooltip
      overlay="source_viewer.issues_on_line.X_issues_of_type_Y.2.issue.type.VULNERABILITY.plural"
    >
      <IssueIcon
        type="VULNERABILITY"
      />
    </Tooltip>
    <span
      className="source-line-issues-counter"
    >
      2
    </span>
  </ButtonPlain>
</td>
`;

exports[`should render correctly: no issues 1`] = `
<td
  className="source-meta source-line-issues"
  data-line-number={3}
/>
`;

exports[`should render correctly: single issue 1`] = `
<td
  className="source-meta source-line-issues source-line-with-issues"
  data-line-number={3}
>
  <ButtonPlain
    aria-label="source_viewer.issues_on_line.show"
    onClick={[MockFunction]}
  >
    <Tooltip
      overlay="source_viewer.issues_on_line.issue_of_type_X.issue.type.VULNERABILITY"
    >
      <IssueIcon
        type="VULNERABILITY"
      />
    </Tooltip>
  </ButtonPlain>
</td>
`;
